fix smallcards layout issue

--- a/client/css/smallcards.css
+++ b/client/css/smallcards.css
@@ -90,3 +90,7 @@
 	text-align: center;
 	padding-top: 8px;
 }
+
+.label, .difficulty{
+	display: none;
+}
